@startuml

class Stamp {
  - id: Integer
  - name: String
  - serial_number: String
  - country: String
  - year: Integer
  - circulation: Integer
  - cost: Integer
  - perforation: Integer
  - topic: String
  - features: String
  - photo_url: String
  - collection_id: Integer
  --
  + getTopExpensiveStamps(): List~Stamp~
  + getRareStampsGrouped(): List~Stamp~
  + getStampById(stamp_id: Integer): Stamp
  + getAllStamps(): List~Stamp~
  + createStamp(params): Stamp
  + deleteStamp(stamp_id: Integer): void
  + updateStamp(stamp_id: Integer, params): Stamp
}

class Collection {
  - id: Integer
  - collector_id: Integer
  - name: String
  - description: String
  - photo_url: String
  --
  + getTopExpensiveCollections(): List~Collection~
  + createCollection(name: String, description: String, image: File): Collection
  + getCollections(): List~Collection~
  + getCollectionById(collection_id: String): Collection
  + deleteCollection(collection_id: String): void
  + updateCollection(collection_id: String, name: String, description: String, image: File): Collection
}

class Collector {
  - user_id: Integer
  - avatar_url: String
  - country: String
  - phone_number: String
  - first_name: String
  - last_name: String
  - middle_name: String
  --
  + getCollectorsList(): List~Collector~
  + getCollectorWithMostExpensiveStamp(): Collector
  + getCollectorWithMaxRareStamps(): Collector
  + getCollectorsSortedByCollectionValue(limit: Integer): List~Collector~
  + getCollectorsWithOldStamps(): List~Collector~
  + getProfile(user_id: String): Collector
  + updateCollector(user_id: Integer, collector_update): Collector
}

class User {
  - id: Integer
  - email: String
  - username: String
  - hashed_password: String
  - role_id: Integer
  --
  + login(response, user): dict
  + logout(request, response): dict
  + register(response, user): dict
  + delete(response, request): dict
  + updateUser(user_id: Integer, user_update): User
}

class Role {
  - id: Integer
  - name: String
}

User "1" -- "1" Collector
Role "1" -- "*" User
Collector "1" -- "*" Collection
Collection "1" -- "*" Stamp

@enduml
